--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ header
 {
     display:flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     font-family: "JetBrains Mono",monospace;
     font-size: 1.5rem;
@@ -213,8 +213,16 @@ header
 
 .dp-drop-container, .player-drop-container, .wlp-drop-container
 {
+   margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 10px;
+}
+
+.mode-selection
+{
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
 }
 
 .badge
